<resources>
    <string name="app_name">Zebe</string>
    <string name="home">主页</string>
    <string name="setting">设置</string>

    <string name="nav_header_title">欢迎使用Zebe</string>
    <string name="nav_header_tips">Zebe为原宅宝对应4.0重置版</string>
    <string name="nav_site_one">First</string>
    <string name="nav_site_two">资源二</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="hot">热门</string>
    <string name="newest">最新</string>
    <string name="campus_belle">校花</string>
    <string name="star">明星</string>
    <string name="senxi">森系</string>
    <string name="pure">清纯</string>
    <string name="tender_model">嫩模</string>
    <string name="girl">少女</string>
    <string name="single_column">单列</string>
    <string name="double_column">双列</string>
    <string name="loading">加载中...</string>
    <string name="mgoto">跳转</string>
    <string name="page_number">请输入页数</string>
    <string name="checkUpdate">检查更新</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account">账号</string>
    <string name="account_email">账号/邮箱</string>
    <string name="password">密码</string>
    <string name="input_password">输入密码</string>
    <string name="login_zebe">登录ZeBe</string>
    <string name="login">登录</string>
    <string name="sign_up">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="sign_in_zebe_account">登录 ZeBe账号</string>
    <string name="sign_up_zebe_account">注册 ZeBe账号</string>
    <string name="remember_password">记住密码</string>
    <string name="email">邮箱</string>
    <string name="input_email">输入电子邮箱</string>
    <string name="name">名称</string>
    <string name="input_name">输入名称</string>
    <string name="agein">重复</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="code">验证码</string>
    <string name="input_code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="forget_zebe_password">忘记 ZeBe密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="input_new_password_again">再次输入新密码</string>
    <string name="change_password">更改密码</string>
</resources>