<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signUp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/sign_up_zebe_account"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <com.lpddr5.nzhaibao.ui.custom.EditTextLayout
            android:id="@+id/signUp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_title="@string/name"
            app:layout_editText_hint="@string/input_name"
            app:layout_editText_color="@color/selected"
            app:layout_focus="true"
            app:layout_required="true"
            />

        <com.lpddr5.nzhaibao.ui.custom.EditTextLayout
            android:id="@+id/signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_title="@string/password"
            app:layout_editText_hint="@string/input_password"
            app:layout_editText_color="@color/selected"
            app:layout_required="true"
            android:layout_marginTop="20dp"
            app:layout_input_type="password"
            />
        <com.lpddr5.nzhaibao.ui.custom.EditTextLayout
            android:id="@+id/signUp_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_title="@string/agein"
            app:layout_editText_hint="@string/input_password_again"
            app:layout_editText_color="@color/selected"
            app:layout_required="true"
            android:layout_marginTop="20dp"
            app:layout_input_type="password"
            />

        <com.lpddr5.nzhaibao.ui.custom.EditTextLayout
            android:id="@+id/signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_title="@string/email"
            app:layout_editText_hint="@string/input_email"
            app:layout_editText_color="@color/selected"
            app:layout_required="true"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <com.lpddr5.nzhaibao.ui.custom.EditTextLayout
                android:id="@+id/signUp_code"
                android:layout_width="0dp"
                android:layout_weight=".6"
                android:layout_height="wrap_content"
                app:layout_title="@string/code"
                app:layout_editText_hint="@string/input_code"
                app:layout_editText_color="@color/selected"
                app:layout_required="true"
                android:layout_marginEnd="10dp"
                app:layout_input_type="number"
                app:layout_maxLength="5"
                />
            <Button
                android:id="@+id/signUp_btn_sendCode"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="wrap_content"
                android:text="@string/send_code"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/signUp_btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
